--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.33.1",
     "@ionic-native/google-plus": "^5.33.0",
-    "@ionic-native/sqlite": "^5.32.1",
+    "@ionic-native/sqlite": "^5.33.1",
+    "@ionic-native/sqlite-porter": "^5.33.1",
     "@ionic/angular": "^5.5.2",
     "cordova-android": "9.1.0",
     "cordova-sqlite-storage": "^6.0.0",
@@ -67,7 +69,8 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.1"
   },
   "description": "An Ionic project",
   "cordova": {
@@ -79,7 +82,9 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {}
     },
     "platforms": [
       "android"
